--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/register": "^7.9.0",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-minify": "^3.1.0",
