Agrega devDependecies Se instala la depenndecia browserify para poder usar los "require" y así poder importar "slidejs" y ser utilizada.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Plantilla por defecto para negocios que usan Mikrotik",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build:css && npm run build:js"
   },
   "keywords": [],
   "author": "INOUTI <inoutisoluciones@gmail.com>",
@@ -17,10 +18,14 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-minify": "^3.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2"
+  },
+  "dependencies": {
+    "@glidejs/glide": "^3.4.1"
   }
 }
